# nubbs

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  pyproject.toml  setup.cfg  tasks.py
src/: entrypoint.sh
src/nubbs/: cli.py  main.py
src/nubbs/apps/: base.py  welcome.py
tests/: test_nubbs.py
