[tool.poetry]
name = "nubbs"
version = "0.1.0"
description = ""
authors = ["Jonathan Moss <xirisr@gmail.com>"]

[tool.poetry.scripts]
nubbs = "nubbs.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.4.0"
rich = "^11.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
invoke = "^1.6.0"
black = "^21.12b0"
mypy = "^0.931"
bandit = "^1.7.1"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
ipython = "^7.31.0"
pudb = "^2022.1"
pytest-cov = "^3.0.0"
pytest-structlog = "^0.5"
pytest-spec = "^3.2.0"
safety = "^1.10.3"
pytest-clarity = "^1.0.1"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.5"
mkdocstrings = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
known_first_party = "nubbs, tests"
default_section = "THIRDPARTY"
use_parentheses = "True"
line_length = 88

